--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <section id="feature" class="section-p1">
       <div class="fe-box">
         <img src="./assets/img/features/f1.png" alt="feature f1" />
-        <h6>Free Shopping</h6>
+        <h6>Free Shipping</h6>
       </div>
       <div class="fe-box">
         <img src="./assets/img/features/f2.png" alt="feature f1" />
