--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>E-commerce Website With HTML CSS JavaScript</title>
+    <title>Buddy Mart</title>
   </head>
   <body>
     <!-- header -->
